Minesweeper grid now uses display grid and is aligned correctly

--- a/src/components/apps/Minesweeper.css
+++ b/src/components/apps/Minesweeper.css
@@ -27,5 +27,5 @@
     margin: 1rem;
     border: 3px inset;
     box-sizing: border-box;
-    padding: 4px 0 0 6px;
+    padding: 4px;
 }
